fixes styling on mobile

--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -10,4 +10,8 @@
 	align-items: center;
 	padding: 4rem;
 	border-radius: 0.8rem;
+
+	@media screen and (max-width: 600px) {
+		padding: 0.5rem;
+	}
 }
