--- a/src/scss/elements/_headline.scss
+++ b/src/scss/elements/_headline.scss
@@ -1,5 +1,6 @@
 .headline {
 	margin-bottom: 2rem;
+	text-align: center;
 
 	&--h1 {
 	}
